--- a/packages/opentelemetry-cloud-trace-exporter/package.json
+++ b/packages/opentelemetry-cloud-trace-exporter/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@google-cloud/opentelemetry-cloud-trace-exporter",
-  "version": "2.4.1",
+  "name": "@zerosuxx/opentelemetry-cloud-trace-exporter",
+  "version": "2.4.1-2",
   "description": "OpenTelemetry Google Cloud Trace Exporter allows the user to send collected traces to Google Cloud Trace.",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
@@ -10,6 +10,7 @@
     "clean": "gts clean",
     "precompile": "npm run compile-protos && version-update.js",
     "compile": "tsc",
+    "typecheck": "tsc --noEmit",
     "prepack": "npm run compile",
     "test": "nyc ts-mocha -p tsconfig.json 'test/**/*.test.ts'",
     "fix": "gts fix",
@@ -36,17 +37,12 @@
     "README.md"
   ],
   "publishConfig": {
-    "access": "public",
-    "registry": "https://wombat-dressing-room.appspot.com"
+    "access": "public"
   },
   "devDependencies": {
-    "@google-cloud/ops-js-scripts": "^1.0.0",
-    "@opentelemetry/api": "1.9.0",
-    "@opentelemetry/core": "1.26.0",
-    "@opentelemetry/resources": "1.26.0",
-    "@opentelemetry/sdk-trace-base": "1.26.0",
+    "@google-cloud/ops-js-scripts": "../../scripts",
     "@types/mocha": "10.0.8",
-    "@types/node": "14.18.63",
+    "@types/node": "22.14.0",
     "@types/sinon": "17.0.3",
     "gcp-metadata": "6.1.0",
     "google-proto-files": "4.2.0",
@@ -59,15 +55,15 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@google-cloud/opentelemetry-resource-util": "^2.4.0",
+    "@zerosuxx/opentelemetry-resource-util": "^2.4.0-1",
     "@grpc/grpc-js": "^1.1.8",
     "@grpc/proto-loader": "^0.7.0",
     "google-auth-library": "^9.0.0"
   },
   "peerDependencies": {
-    "@opentelemetry/api": "^1.0.0",
-    "@opentelemetry/core": "^1.0.0",
-    "@opentelemetry/resources": "^1.0.0",
-    "@opentelemetry/sdk-trace-base": "^1.0.0"
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^2.0.1",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-trace-base": "^2.0.1"
   }
 }
